Add kafka-streams module

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>kafka-producer</module>
         <module>kafka-consumer</module>
+        <module>kafka-streams</module>
     </modules>
 
     <properties>
